# duck-read-cache-fs

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  extension_config.cmake
benchmark/: README.md  lineitem_sequential_read.cpp  rand_utils.hpp  random_read_benchmark.cpp  read_s3_object.cpp  sequential_read_benchmark.cpp
doc/: common_problem_troubleshooting.md  consistency_spec.md  example_usage.md  resource_consumption.md
example/: example_usage.md  performance_troubleshooting_notes.md  read_http_csv.cpp
src/: base_cache_filesystem.cpp  base_profile_collector.cpp  cache_entry_info.cpp  cache_filesystem.cpp  cache_filesystem_config.cpp  cache_filesystem_ref_registry.cpp  cache_httpfs_extension.cpp  cache_reader_manager.cpp  cache_status_query_function.cpp  disk_cache_filesystem.cpp  disk_cache_reader.cpp  histogram.cpp  in_memory_cache_filesystem.cpp  in_memory_cache_reader.cpp  noop_cache_reader.cpp  read_cache_fs_extension.cpp  temp_profile_collector.cpp
src/include/: base_cache_filesystem.hpp  base_cache_reader.hpp  base_profile_collector.hpp  cache_entry_info.hpp  cache_filesystem.hpp  cache_filesystem_config.hpp  cache_filesystem_ref_registry.hpp  cache_httpfs_extension.hpp  cache_reader_manager.hpp  cache_status_query_function.hpp  disk_cache_filesystem.hpp  disk_cache_reader.hpp  histogram.hpp  in_mem_cache_block.hpp  in_memory_cache_filesystem.hpp  in_memory_cache_reader.hpp  noop_cache_reader.hpp  read_cache_fs_extension.hpp  scope_guard.hpp  temp_profile_collector.hpp
src/utils/: fake_filesystem.cpp  filesystem_utils.cpp  histogram.cpp  immutable_buffer.cpp  mock_filesystem.cpp  string_utils.cpp  thread_pool.cpp  thread_utils.cpp
src/utils/include/: copiable_value_lru_cache.hpp  exclusive_lru_cache.hpp  exclusive_multi_lru_cache.hpp  fake_filesystem.hpp  filesystem_utils.hpp  histogram.hpp  immutable_buffer.hpp  lru_cache.hpp  map_utils.hpp  mock_filesystem.hpp  no_destructor.hpp  resize_uninitialized.hpp  shared_lru_cache.hpp  size_literals.hpp  string_utils.hpp  thread_pool.hpp  thread_utils.hpp  time_utils.hpp  type_traits.hpp
test/data/: README.md  attach_test.db  stock-exchanges.csv
test/sql/: cache_access_info.test  clear_cache.test  disk_cache_filesystem.test  extension.test  glob_read.test  inmem_cache_filesystem.test  insufficient_disk_space.test  max_subrequest_fanout.test  noop_cache_filesystem.test  wrap_cache_filesystem.test
unit/: test_base_cache_filesystem.cpp  test_cache_filesystem.cpp  test_cache_filesystem_with_mock.cpp  test_copiable_value_lru_cache.cpp  test_disk_cache_filesystem.cpp  test_exclusive_lru_cache.cpp  test_exclusive_multi_lru_cache.cpp  test_filesystem_config.cpp  test_filesystem_utils.cpp  test_histogram.cpp  test_in_memory_cache_filesystem.cpp  test_large_file_disk_reader.cpp  test_large_file_inmem_reader.cpp  test_no_destructor.cpp  test_noop_cache_reader.cpp  test_set_extension_config.cpp  test_shared_lru_cache.cpp  test_size_literals.cpp  test_stale_deletion.cpp  test_string_utils.cpp  test_thread_pool.cpp
utils/include/: resize_uninitialized.h  type_traits.hpp
